[gd_scene load_steps=3 format=3 uid="uid://clgvpjmiep15n"]

[ext_resource type="Theme" uid="uid://bvnnmee8rw1j0" path="res://theme/main_theme.tres" id="1_pgtok"]
[ext_resource type="Script" path="res://source/main_menu.gd" id="2_drl1w"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pgtok")
script = ExtResource("2_drl1w")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Simple Game"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 60)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Name"

[node name="AddressEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 60)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "IP Address"

[node name="JoinButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Join Game"

[node name="CreateButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Create Game"

[node name="ExitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Exit Game"

[node name="LobbyDisplay" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(400, 600)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -600.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyDisplay"]
layout_mode = 2

[node name="Label" type="Label" parent="LobbyDisplay/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Lobby"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="LobbyDisplay/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LobbyElementContainer" type="VBoxContainer" parent="LobbyDisplay/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="LobbyDisplay/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="LobbyDisplay/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
